--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,10 +66,51 @@ dependencies:
   shared_preferences: ^2.2.2
   image: ^4.1.3
   getwidget: ^4.0.0
+  percent_indicator: ^4.0.0
+  flutter_screenutil: ^5.9.0
+  expandable_page_view: ^1.0.17
+  flutter_launcher_icons: ^0.13.1
+  # flutter splash customize
+  flutter_native_splash: ^2.3.8
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+flutter_native_splash:
+  background_image: assets/background-splash.png
+  image: assets/logo.png
+
+  android_12:
+    background_image: assets/background-splash.png
+    image: assets/logo.png
+
+  web: false
+
+
+
+# App icon Customize
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo/icon_logo.png"
+
+  web:
+    generate: true
+    image_path: "assets/images/logo/icon_logo.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/images/logo/icon_logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/logo/icon_logo.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -95,7 +136,6 @@ flutter:
     - assets/images/logo/
     - assets/images/banner/
     - assets/images/lottie_animation/
-    - assets/video/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
