--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  #  sdk: '>=2.19.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -37,10 +38,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.4
   lottie: ^2.3.2
-  path: ^1.8.2
+  path: ^1.8.3
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   group_button: ^5.3.3
 
   #location Fatch
@@ -62,7 +63,7 @@ dependencies:
   cloud_firestore: ^4.8.5
   flutter_bloc: ^8.1.3
   firebase_storage: ^11.5.3
-  uuid: ^4.2.1
+  uuid: ^4.2.2
   shared_preferences: ^2.2.2
   image: ^4.1.3
   getwidget: ^4.0.0
@@ -72,6 +73,14 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   # flutter splash customize
   flutter_native_splash: ^2.3.8
+  image_cropper: ^5.0.1
+  easy_pdf_viewer: ^1.0.7
+  flutter_switch: ^0.3.2
+
+  #  this package is use for page animation
+  page_transition: "^2.1.0"
+  get:
+  file_picker: ^6.1.1
 
 
 
@@ -89,7 +98,6 @@ flutter_native_splash:
     image: assets/logo.png
 
   web: false
-
 
 
 # App icon Customize
@@ -118,6 +126,7 @@ flutter_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
