--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  #  sdk: '>=2.19.1 <3.0.0'
   sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
@@ -41,8 +40,8 @@ dependencies:
   path: ^1.8.3
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.0
-  intl: ^0.19.0
-  group_button: ^5.3.3
+  intl: ^0.18.1
+  group_button: any
 
   #location Fatch
   geolocator: ^10.1.0
@@ -73,7 +72,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   # flutter splash customize
   flutter_native_splash: ^2.3.8
-  image_cropper: ^5.0.1
+#  image_cropper: ^5.0.1
   easy_pdf_viewer: ^1.0.7
   flutter_switch: ^0.3.2
 
@@ -81,7 +80,11 @@ dependencies:
   page_transition: "^2.1.0"
   get:
   file_picker: ^6.1.1
-
+  path_provider: ^2.0.3
+  gallery_saver: ^2.0.3
+  image_cropper: ^4.0.1
+  firebase_messaging: ^14.7.16
+  device_preview: ^1.1.0
 
 
 dev_dependencies:
@@ -97,7 +100,9 @@ flutter_native_splash:
     background_image: assets/background-splash.png
     image: assets/logo.png
 
-  web: false
+  web:
+    background_image: assets/background-splash.png
+    image: assets/logo.png
 
 
 # App icon Customize
