--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 2.0.2+1
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -42,8 +42,6 @@ dependencies:
   qr_code_scanner: ^1.0.0
   intl: ^0.18.1
   group_button: any
-
-  #location Fatch
   geolocator: ^10.1.0
   geocoding: ^2.1.0
   dropdown_textfield: ^1.0.8
@@ -54,9 +52,6 @@ dependencies:
   #image Slider
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
-  #video player
-  video_player: ^2.7.2
-  chewie: ^1.7.0
   firebase_core: ^2.22.0
   firebase_auth: ^4.14.1
   cloud_firestore: ^4.8.5
@@ -75,16 +70,21 @@ dependencies:
 #  image_cropper: ^5.0.1
   easy_pdf_viewer: ^1.0.7
   flutter_switch: ^0.3.2
+  webview_flutter: ^3.0.2
 
   #  this package is use for page animation
   page_transition: "^2.1.0"
   get:
   file_picker: ^6.1.1
   path_provider: ^2.0.3
-  gallery_saver: ^2.0.3
+#  gallery_saver: ^2.0.3
+  gallery_saver: any
   image_cropper: ^4.0.1
-  firebase_messaging: ^14.7.16
+  firebase_messaging: any
   device_preview: ^1.1.0
+  change_app_package_name: ^1.1.0
+  web: ^0.5.0
+  url_launcher: ^6.1.6
 
 
 dev_dependencies:
